@@ -3,6 +3,7 @@ package com.kamikazejam.kamicommon.configuration.spigot;
 import com.cryptomorin.xseries.XMaterial;
 import com.kamikazejam.kamicommon.configuration.observe.ConfigObserver;
 import com.kamikazejam.kamicommon.util.MessageBuilder;
+import java.util.stream.Collectors;
 import lombok.Getter;
 import lombok.Setter;
 import org.bukkit.Bukkit;
@@ -128,7 +129,7 @@ public abstract class CachedConfig<T extends KamiConfig> implements ConfigObserv
                     return present;
                 })
                 .map(Optional::get)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     // ------------------------------------ //
